# spur

./: .rosinstall  .travis.yml  README.md  README.rst  README_ja.rst
spur/: CHANGELOG.rst  CMakeLists.txt  package.xml
spur_2dnav/: CHANGELOG.rst  CMakeLists.txt  package.xml
spur_2dnav/config/: 2dnav.rviz  base_local_planner_params.yaml  costmap_common.yaml  costmap_common_params.yaml  costmap_global.yaml  costmap_local.yaml  global_costmap_params.yaml  gmapping.yaml  local_costmap_params.yaml  move_base.yaml
spur_2dnav/launch/: 2dnav.launch  amcl.launch  gmapping.launch  move_base.launch
spur_2dnav/launch/includes/: amcl.launch.xml  move_base.launch.xml
spur_2dnav/maps/: playground.pgm  playground.yaml
spur_2dnav/test/: test-gmapping.test
spur_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
spur_bringup/config/: laser_config.yaml
spur_bringup/launch/: joy_teleop.launch  laser_filter.launch  minimal.launch
spur_bringup/test/: test-minimal.test
spur_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
spur_controller/config/: dynamixel_ports.yaml  spur_controller_configuration.yaml  spur_controller_configuration_gen.sh
spur_controller/launch/: base_controller.launch  joy_teleop.launch  kb_teleop.launch  ps3_teleop.launch  spur_controller.launch  spur_dynamixel.launch
spur_controller/nodes/: base_controller.py  controller_manager.py
spur_controller/src/spur_controller/: joint_state_publisher.py
spur_controller/test/: 1_test_odom.py  2_check_velocity.py  cmd_vel_test.py
spur_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
spur_description/launch/: rviz.launch  spur.rviz  spur_amcl.rviz
spur_description/urdf/: spur.gazebo.xacro  spur.urdf.xacro
spur_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
spur_gazebo/config/: spur_gazebo_control.yaml  spur_gazebo_control_gen.sh
spur_gazebo/launch/: spur_gazebo_control.launch  spur_world.launch
spur_gazebo/test/: test-gazebo.test
spur_gazebo/worlds/: playground.world
