<?xml version="1.0"?>
<package>
  <name>spur</name>
  <version>0.1.2</version>
  <description>The spur package</description>

  <maintainer email="dev@opensource-robotics.tokyo.jp">TORK</maintainer>
  <author email="534o@opensource-robotics.tokyo.jp">Tokyo Opensource Robotics Programmer 534o</author>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/spur</url>
  <url type="bugtracker">https://github.com/tork-a/spur/issues</url>
  <url type="repository">https://github.com/tork-a/spur</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>spur_controller</run_depend>
  <run_depend>spur_description</run_depend>
  <run_depend>spur_gazebo</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
