<?xml version="1.0"?>
<package>
  <name>spur</name>
  <version>0.2.3</version>
  <description>Meta package for SPUR omni-directional mobile manipulator robot made at Tamagawa University.</description>

  <maintainer email="okdhryk@gmail.com">Hiroyuki Okada</maintainer>
  <maintainer email="dev@opensource-robotics.tokyo.jp">TORK</maintainer>
  <author email="534o@opensource-robotics.tokyo.jp">Tokyo Opensource Robotics Programmer 534o</author>
  <author>Isaac I. Y. Saito</author>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/spur</url>
  <url type="bugtracker">https://github.com/tork-a/spur/issues</url>
  <url type="repository">https://github.com/tork-a/spur</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>spur_bringup</run_depend>
  <run_depend>spur_controller</run_depend>
  <run_depend>spur_description</run_depend>
  <run_depend>spur_gazebo</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
