<?xml version="1.0"?>
<package>
  <name>spur_controller</name>
  <version>0.2.1</version>
  <description>A package for mobile base control for SPUR omni-directional mobile manipulator robot made at Tamagawa University.</description>

  <maintainer email="okdhryk@gmail.com">Hiroyuki Okada</maintainer>
  <maintainer email="dev@opensource-robotics.tokyo.jp">TORK</maintainer>
  <license>BSD</license>
  <author email="534o@opensource-robotics.tokyo.jp">Tokyo Opensource Robotics Programmer 534o</author>
  <author>Isaac I. Y. Saito</author>

  <url type="website">http://wiki.ros.org/spur_controller</url>
  <url type="bugtracker">https://github.com/tork-a/spur/issues</url>
  <url type="repository">https://github.com/tork-a/spur</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>dynamixel_controllers</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>teleop_twist_keyboard</run_depend>

  <export>
  </export>
</package>
