<?xml version="1.0"?>
<package>
  <name>spur_description</name>
  <version>0.1.3</version>
  <description>The spur_description package</description>

  <maintainer email="dev@opensource-robotics.tokyo.jp">TORK</maintainer>

  <license>BSD</license>

  <author email="534o@opensource-robotics.tokyo.jp">Tokyo Opensource Robotics Programmer 534o</author>

  <url type="website">http://wiki.ros.org/spur_description</url>
  <url type="bugtracker">https://github.com/tork-a/spur/issues</url>
  <url type="repository">https://github.com/tork-a/spur</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>rviz</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>urdf_tutorial</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
