<?xml version="1.0"?>
<package>
  <name>spur_description</name>
  <version>0.2.6</version>
  <description>A package for storing 3D model of SPUR omni-directional mobile manipulator robot made at Tamagawa University.</description>

  <maintainer email="okdhryk@gmail.com">Hiroyuki Okada</maintainer>
  <maintainer email="dev@opensource-robotics.tokyo.jp">TORK</maintainer>
  <license>BSD</license>
  <author email="534o@opensource-robotics.tokyo.jp">Tokyo Opensource Robotics Programmer 534o</author>
  <author>Isaac I. Y. Saito</author>

  <url type="website">http://wiki.ros.org/spur_description</url>
  <url type="bugtracker">https://github.com/tork-a/spur/issues</url>
  <url type="repository">https://github.com/tork-a/spur</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>urdf_tutorial</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
